<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_light"
    tools:context=".MainActivity">


    <LinearLayout
        android:id="@+id/play1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0"
        android:gravity="bottom"
        android:orientation="vertical">

        <Button
            android:id="@+id/playAgain"
            android:layout_width="match_parent"
            android:layout_height="43dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:onClick="newGame"
            android:text="@string/play_again"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/gridLayout2"
            app:layout_constraintHorizontal_bias="0.543"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.962" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/play2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0"
        android:orientation="vertical">

        <TextView
            android:id="@+id/winnerPlayer"
            android:layout_width="match_parent"
            android:layout_height="33dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:gravity="top|center"
            android:textSize="24sp"
            app:fontFamily="@font/delius_swash_caps"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.043" />
    </LinearLayout>

    <android.support.v7.widget.GridLayout
        android:id="@+id/gridLayout2"
        android:layout_width="372dp"
        android:layout_height="360dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:background="@drawable/board"
        app:columnCount="3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:rowCount="3">

        <ImageView
            android:id="@+id/imageView0"
            android:layout_width="120dp"
            android:layout_height="113dp"
            android:alpha="0"
            android:contentDescription="@string/imageview0"
            android:onClick="dropIn"
            android:tag="0" />

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="128dp"
            android:layout_height="113dp"
            android:alpha="0"
            android:contentDescription="@string/imageview1"
            android:onClick="dropIn"
            android:tag="1" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="118dp"
            android:layout_height="113dp"
            android:alpha="0"
            android:contentDescription="@string/imageview2"
            android:onClick="dropIn"
            android:tag="2" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="114dp"
            android:layout_height="132dp"
            android:alpha="0"
            android:contentDescription="@string/imageview3"
            android:onClick="dropIn"
            android:tag="3" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="124dp"
            android:layout_height="132dp"
            android:alpha="0"
            android:contentDescription="@string/imageview4"
            android:onClick="dropIn"
            android:tag="4" />

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="114dp"
            android:layout_height="134dp"
            android:alpha="0"
            android:contentDescription="@string/imageview5"
            android:onClick="dropIn"
            android:tag="5" />

        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="114dp"
            android:layout_height="113dp"
            android:alpha="0"
            android:contentDescription="@string/imageview6"
            android:onClick="dropIn"
            android:tag="6" />

        <ImageView
            android:id="@+id/imageView7"
            android:layout_width="128dp"
            android:layout_height="113dp"
            android:alpha="0"
            android:contentDescription="@string/imageview7"
            android:onClick="dropIn"
            android:tag="7" />

        <ImageView
            android:id="@+id/imageView8"
            android:layout_width="116dp"
            android:layout_height="113dp"
            android:alpha="0"
            android:contentDescription="@string/imageview8"
            android:onClick="dropIn"
            android:tag="8" />
    </android.support.v7.widget.GridLayout>


</android.support.constraint.ConstraintLayout>